--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "export": "next export"
   },
   "dependencies": {
+    "firebase": "^8.2.7",
     "next": "^10.0.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
